--- a/MathsGradeAssessmentTool/MathsGradeAssessmentTool.csproj
+++ b/MathsGradeAssessmentTool/MathsGradeAssessmentTool.csproj
@@ -59,16 +59,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\StartTeacherSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\StartTeacherSelectForm.Designer.cs">
+      <DependentUpon>StartTeacherSelectForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\StudentCompentency.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StudentCompentency.Designer.cs">
+      <DependentUpon>StudentCompentency.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\StudentSelectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StudentSelectForm.Designer.cs">
+      <DependentUpon>StudentSelectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\StartTeacherSelectForm.en.resx">
+      <DependentUpon>StartTeacherSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StartTeacherSelectForm.resx">
+      <DependentUpon>StartTeacherSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StudentCompentency.resx">
+      <DependentUpon>StudentCompentency.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StudentSelectForm.resx">
+      <DependentUpon>StudentSelectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
