Added a way to securely store the Userid and Password in the app settings. Now you have to enter the uername and password only once and it will persist until you wish to change it.
Added a few checks to see if email and password was empty or null

--- a/MathsGradeAssessmentTool/App.config
+++ b/MathsGradeAssessmentTool/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="MathsGradeAssessmentTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="MathsGradeAssessmentTool.Properties.Settings.MathsToolDatabaseConnectionString"
@@ -10,4 +13,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <userSettings>
+    <MathsGradeAssessmentTool.Properties.Settings>
+      <setting name="EmailIdE" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PasswordE" serializeAs="String">
+        <value />
+      </setting>
+    </MathsGradeAssessmentTool.Properties.Settings>
+  </userSettings>
 </configuration>
