--- a/MathsGradeAssessmentTool/Properties/Settings.settings
+++ b/MathsGradeAssessmentTool/Properties/Settings.settings
@@ -10,5 +10,11 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MathsToolDatabase.mdf;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="EmailIdE" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="PasswordE" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
