--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ DocProject/Help/*.hhk
 DocProject/Help/*.hhp
 
 # Click-Once directory
-publish/
+!publish/
 
 # Publish Web Output
 *.[Pp]ublish.xml
