Added basic security features, needs more work

--- a/MathsGradeAssessmentTool/App.config
+++ b/MathsGradeAssessmentTool/App.config
@@ -21,6 +21,9 @@
       <setting name="PasswordE" serializeAs="String">
         <value />
       </setting>
+      <setting name="isLockedSet" serializeAs="String">
+        <value>True</value>
+      </setting>
     </MathsGradeAssessmentTool.Properties.Settings>
   </userSettings>
 </configuration>
