--- a/MathsGradeAssessmentTool/Properties/Settings.settings
+++ b/MathsGradeAssessmentTool/Properties/Settings.settings
@@ -16,5 +16,8 @@
     <Setting Name="PasswordE" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="isLockedSet" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
